--- a/TeamUp WashU/Base.lproj/Main.storyboard
+++ b/TeamUp WashU/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -263,24 +263,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Nov 2023" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bth-9h-5Ii">
-                                <rect key="frame" x="130" y="46" width="117" height="32"/>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="26"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sOx-R7-N1U">
-                                <rect key="frame" x="0.0" y="46" width="141.66666666666666" height="31.333333333333329"/>
-                                <state key="normal" image="arrowshape.turn.up.left.circle.fill" catalog="system"/>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wfo-0x-8eB">
-                                <rect key="frame" x="251" y="46" width="141.33333333333337" height="31.333333333333329"/>
-                                <state key="normal" image="arrowshape.turn.up.right.circle.fill" catalog="system"/>
-                            </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Screenshot 2024-11-12 at 8.09.44 PM" id="VqV-L6-kdP">
-                                <rect key="frame" x="-6" y="75" width="405" height="308"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Od4-3B-vVk">
                                 <rect key="frame" x="139" y="469" width="208" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -333,21 +315,14 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="+"/>
                             </button>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0ov-PK-57p" customClass="FSCalendar">
+                                <rect key="frame" x="29" y="102" width="311" height="190"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="W0H-EH-gDO"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="bth-9h-5Ii" firstAttribute="top" secondItem="W0H-EH-gDO" secondAttribute="top" constant="24" id="5d8-lW-HFG"/>
-                            <constraint firstItem="Wfo-0x-8eB" firstAttribute="centerY" secondItem="bth-9h-5Ii" secondAttribute="centerY" id="FPm-rR-Vni"/>
-                            <constraint firstItem="Wfo-0x-8eB" firstAttribute="leading" secondItem="bth-9h-5Ii" secondAttribute="trailing" id="Hv5-XH-aor"/>
-                            <constraint firstItem="Wfo-0x-8eB" firstAttribute="height" secondItem="bth-9h-5Ii" secondAttribute="height" id="MLN-Ck-cwv"/>
-                            <constraint firstItem="bth-9h-5Ii" firstAttribute="centerX" secondItem="W0H-EH-gDO" secondAttribute="centerX" id="QIz-FT-6hb"/>
-                            <constraint firstItem="W0H-EH-gDO" firstAttribute="trailing" secondItem="Wfo-0x-8eB" secondAttribute="trailing" id="bhN-t7-Sv6"/>
-                            <constraint firstItem="sOx-R7-N1U" firstAttribute="height" secondItem="bth-9h-5Ii" secondAttribute="height" id="dnm-M0-uey"/>
-                            <constraint firstItem="W0H-EH-gDO" firstAttribute="leading" secondItem="sOx-R7-N1U" secondAttribute="leading" id="iRw-Bn-Yp4"/>
-                            <constraint firstItem="sOx-R7-N1U" firstAttribute="centerY" secondItem="bth-9h-5Ii" secondAttribute="centerY" id="kxp-jE-tcr"/>
-                            <constraint firstItem="bth-9h-5Ii" firstAttribute="leading" secondItem="sOx-R7-N1U" secondAttribute="trailing" id="u4O-9n-nom"/>
-                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Calendar" image="calendar" catalog="system" selectedImage="calendar" id="hYq-DM-uF1"/>
                 </viewController>
@@ -471,7 +446,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="4hb-Oa-1Hl">
-                                <rect key="frame" x="16" y="504.00000000000006" width="49.666666666666657" height="34.333333333333428"/>
+                                <rect key="frame" x="16" y="504" width="49.666666666666657" height="34.333333333333371"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ylK-Tp-Eq6">
                                         <rect key="frame" x="0.0" y="0.0" width="49.666666666666664" height="34.333333333333336"/>
@@ -554,9 +529,6 @@
     </scenes>
     <resources>
         <image name="Icon" width="1024" height="1024"/>
-        <image name="Screenshot 2024-11-12 at 8.09.44 PM" width="780" height="462"/>
-        <image name="arrowshape.turn.up.left.circle.fill" catalog="system" width="128" height="123"/>
-        <image name="arrowshape.turn.up.right.circle.fill" catalog="system" width="128" height="123"/>
         <image name="calendar" catalog="system" width="128" height="107"/>
         <image name="chevron.down" catalog="system" width="128" height="70"/>
         <image name="house" catalog="system" width="128" height="104"/>
